<resources>
    <string name="app_name">iTunes Service</string>
    <string name="quick_search">Hızlı Arama</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="date_placeholder">-/-/-</string>
    <string name="product_image">Product Image</string>
    <string name="detail">DETAIL</string>
    <string name="no_results_found">No results found</string>
    <string name="reload">Reload</string>
    <string name="results_not_loaded">Results not loaded</string>
    <string name="product_description">Product Description</string>
    <string name="genre_type">Genre Type</string>
    <string name="movies">Movies</string>
    <string name="musics">Musics</string>
    <string name="books">Books</string>
    <string name="podcasts">Podcasts</string>
</resources>