<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="8dp">
<com.google.android.material.card.MaterialCardView
    android:id="@+id/product_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="10dp"
    android:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/product_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/product_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/product_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textSize="12sp"
            android:alpha="0.5"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableStartCompat="@drawable/ic_date_dot"
            android:drawablePadding="8dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
</FrameLayout>